# model-server

./: model-server.cabal  xournal-web.cabal
exe/: model-server.hs  xournal-web.hs
lib/Application/Xournal/Server/: Yesod.hs
lib/HEP/Automation/Model/Common/: Type.hs
lib/HEP/Automation/Model/Server/: Form.hs  Type.hs  Yesod.hs
